<resources>
    <string name="app_name">My AppPortfolio</string>
    <string name="MainTitle">My Nanodegree apps!</string>
    <string name="action_settings">Settings</string>
    <string name="SpotifyStreamer">Spotify Streamer</string>
    <string name="ScoresApp">Scores App</string>
    <string name="LibraryApp">Library App</string>
    <string name="BuildItBigger">Build It Bigger</string>
    <string name="XYZReader">XYZ Reader</string>
    <string name="Capstone">Capstone</string>

    <color name="Blue">#3AF1FC</color>
    <color name="Orange1">#FFF400</color>
    <color name="Orange2">#FFC400</color>
    <color name="Orange3">#FF9400</color>
    <color name="Orange4">#FF6400</color>
    <color name="Orange5">#FF3400</color>
    <color name="Orange6">#FF0000</color>
</resources>
